@startuml Admin_AI_Enhancements_Classes
!theme plain
title Diagram Klas: Admin Panel AI Enhancements

package "Betting.Domain" {
    class AiMatchInsight {
        +string EventId
        +string Content
        +DateTime GeneratedAt
        +UpdateInsight(string content)
    }

    class AiGenerationLog {
        +Guid Id
        +string EventId
        +DateTime Timestamp
        +string Status
        +string ErrorMessage
    }
}

package "Application Services" {
    interface IAiAssistantService {
        +Task<string> GetMatchInsightAsync(string eventId)
        +Task<IEnumerable<AiMatchInsight>> GetAllInsightsAsync()
        +Task<string> RegenerateInsightAsync(string eventId)
        +Task<bool> DeleteInsightAsync(string eventId)
    }
}

IAiAssistantService --> AiMatchInsight
IAiAssistantService --> AiGenerationLog
@enduml